--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -18,7 +18,7 @@ Where did you attend High School, and did you graduate? Compare english class to
   
 ### my answer     
   
-
+I went to SOAR High School. I graduated in 2021. I like English better than Math. I am best in English, and Communications.
      
 
 
