--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -27,7 +27,7 @@ I went to SOAR High School. I graduated in 2021. I like English better than Math
 
 ### my answer   
   
-   
+   Yes, I have a MacBook. I think I am about a 7 or 8 on the scale. I have stable internet connection at home. I liked going to the library too.
 
 ## Others and You?   
 What name do you prefer to be called by your classmates and instructor, if your buddys call you something but you want people in the class to call you something else - what would that be? 
