--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -33,7 +33,7 @@ I went to SOAR High School. I graduated in 2021. I like English better than Math
 What name do you prefer to be called by your classmates and instructor, if your buddys call you something but you want people in the class to call you something else - what would that be? 
 
 ### my answer     
-  
+  I am currently a Business student at CSU Channel Islands and will soon be graduating. I have a remote job in marketing and hope to go into that realm of work. I love my communication and business classes. Not necessarily the math ones, though.
    
  
 
