--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -44,7 +44,9 @@ What do you want to achieve in life?  What college subject do you think would be
 
 ### my answer     
   
-   
+   I am currently a Business student at CSU Channel Islands and will soon be graduating. I have a remote job in marketing and hope to go into that realm of work. I love my communication and business classes. Not necessarily the math ones, though.
+
+
  
 
 
