--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -57,7 +57,7 @@ Have you ever gone to foreign countries, if so which ones, if not Where might yo
 
 ### my answer     
   
-   
+   I have been to Mexico to visit family. That's it.I have not been in the military. Neither has anyone in my family.
   
 
 
