--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -69,7 +69,9 @@ What grade do you need to attain in stats to not upset your future plans, What i
  
 
 ### my answer     
-  
+  Yes, I have. However, I did not do well. I need this class to satisfy my graduation requirements. My plan is to take my higher education classes in the Fall and Spring and graduate from CSUCI.
+ 
+
    
  
 
